--- a/package.json
+++ b/package.json
@@ -9,12 +9,31 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/cssinjs": "^1.17.2",
+    "@apollo/client": "^3.8.7",
+    "@apollo/server": "^4.9.5",
+    "@as-integrations/next": "^3.0.0",
+    "@auth0/nextjs-auth0": "^3.2.0",
+    "@prisma/client": "^5.6.0",
+    "antd": "^5.10.3",
+    "aws4": "^1.12.0",
+    "canvas": "^2.11.2",
+    "chart.js": "^4.4.0",
+    "critters": "^0.0.20",
+    "fabric": "^5.3.0",
+    "graphql": "^16.8.1",
+    "graphql-tag": "^2.12.6",
+    "mongoose": "^8.0.0",
+    "next": "14.0.1",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
-    "next": "14.0.1"
+    "react-hot-toast": "^2.4.1"
   },
   "devDependencies": {
+    "@types/react": "18.2.37",
     "eslint": "^8",
-    "eslint-config-next": "14.0.1"
+    "eslint-config-next": "14.0.1",
+    "prisma": "^5.6.0"
   }
 }
