--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@prisma/client": "^5.6.0",
     "antd": "^5.10.3",
     "aws4": "^1.12.0",
+    "canvas": "^2.11.2",
     "chart.js": "^4.4.0",
     "critters": "^0.0.20",
     "dayjs": "^1.11.10",
